# zonefile-search-tantivy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: cache.rs  main.rs
crates/api/src/routes/: exact.rs  health.rs  mod.rs  search.rs
crates/api/src/search/: ranking.rs
crates/domain-core/: Cargo.toml
crates/domain-core/src/: config.rs  domain.rs  error.rs  lib.rs  schema.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: daily.rs  full.rs  main.rs  progress.rs
crates/word-client/: Cargo.toml
crates/word-client/src/: client.rs  error.rs  lib.rs
crates/zonefile-client/: Cargo.toml
crates/zonefile-client/src/: downloader.rs  error.rs  lib.rs  parser.rs
docs/: API.md  DEPLOYMENT.md
scripts/: daily-sync.sh  deploy.sh  domain-api.service  monitor-resources.sh
