[workspace]
resolver = "2"
members = [
    "crates/domain-core",
    "crates/word-client",
    "crates/zonefile-client",
    "crates/indexer",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Moustafa Mahdy"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Search engine
tantivy = "0.22"

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
idna = "1.0"
md5 = "0.7"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1.9"
tempfile = "3.14"
indicatif = { version = "0.17", features = ["tokio"] }

# Compression
async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
tokio-util = { version = "0.7", features = ["compat"] }

# Testing
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
