[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "domain-api"
path = "src/main.rs"

[dependencies]
domain-core = { path = "../domain-core" }
word-client = { path = "../word-client" }
tantivy = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
