[package]
name = "domain-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
idna = { workspace = true }
md5 = { workspace = true }
tracing = { workspace = true }
