[package]
name = "zonefile-client"
version.workspace = true
edition.workspace = true

[dependencies]
domain-core = { path = "../domain-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
async_zip = { workspace = true }
tokio-util = { workspace = true }
